--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   ],
   "author": "qizf",
   "license": "MIT",
+  "homepage": "https://github.com/qizf7/rap-cli",
   "repository": {
     "type": "git",
-    "url": "https://github.com/qizf7/rap-cli"
+    "url": "https://github.com/qizf7/rap-cli.git"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -22,8 +23,6 @@
     "colors": "^1.3.1",
     "commander": "^2.17.0",
     "lodash": "^4.17.10",
-    "lodash.template": "^4.4.0",
-    "ora": "^3.0.0",
-    "yargs": "^12.0.1"
+    "ora": "^3.0.0"
   }
 }
