--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "cli-table-zh": "^0.3.1",
+    "cli-table2": "^0.2.0",
     "colors": "^1.3.1",
     "commander": "^2.17.0",
     "lodash": "^4.17.10",
